--- a/app/views/application/_modal.html.haml
+++ b/app/views/application/_modal.html.haml
@@ -1,4 +1,4 @@
-.modal(tabindex="-1" data-controller="remote-modal")
+.modal.fade(tabindex="-1" data-controller="remote-modal" data-action="turbo:before-render@document->remote-modal#hideBeforeRender")
   .modal-dialog
     .modal-content
       .modal-header
