rename partial to remote_modal and add remote_modal_body id

--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -1,3 +1,2 @@
-= turbo_frame_tag "remote_modal" do
-  = render "modal", title: "Edit product" do
-    #product_form= render "form", product: @product
+= render "remote_modal", title: "Edit product" do
+  = render "form", product: @product
