--- a/app/views/products/form_update.turbo_stream.erb
+++ b/app/views/products/form_update.turbo_stream.erb
@@ -1,3 +1,3 @@
-<%= turbo_stream.update "product_form" do %>
+<%= turbo_stream.update "remote_modal_body" do %>
   <%= render "form", product: @product %>
 <% end %>
