--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,3 +1,2 @@
-= turbo_frame_tag "remote_modal" do
-  = render "modal", title: "New product" do
-    #product_form= render "form", product: @product
+= render "remote_modal", title: "New product" do
+  = render "form", product: @product
