Handle links inside remote modal

--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -9,3 +9,4 @@
     = errors_for product, :description
   .mb-3
     = f.button class: "btn btn-primary"
+    = link_to "Cancel", products_path, class: "btn btn-outline-secondary"
